Event Gap Fixed

--- a/css/style.css
+++ b/css/style.css
@@ -335,7 +335,7 @@ nav {
 
 /* =====================Event Section Starting=================== */
 #event {
-    padding-top: 440px;
+    padding-top: 200px;
 }
 
 .event_header {
